--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FrontEnd Forces</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
 
     <h1>Project frontend-forces main page(default)</h1>
-    <a href="files/army/main.html">Click here for Army main page</a>
-    <a href="files/airforce/main.html">Click here for IAF main page</a>
+    <a href="files/army/main.html" target="_blank">Click here for Army main page</a>
+    <a href="files/airforce/main.html" target="_blank">Click here for IAF main page</a>
 
 </body>
 
