Added common elements

--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FrontEnd Forces</title>
-    <link rel="stylesheet" href="css/index.css">
+    <meta charset="utf-8">
+    <title>Creative Menu</title>
+    <link rel="stylesheet" href="./css/style_creative.css">
 </head>
 
-<body>
-
-    <h1>Project frontend-forces main page(default)</h1>
-    <a href="files/army/main.html" target="_blank">Click here for Army main page</a>
-    <a href="files/airforce/main.html" target="_blank">Click here for IAF main page</a>
-
+<body style="background-image:url()">
+    <div class="div1">
+        <ul>
+            <li><a href="./html/Form_army.html" target="_blank">INDIAN<br>ARMED FORCES</a></li>
+            <li><a href="./html/Form_air_force.html" target="_blank">INDIAN<br>AIR FORCE</a></li>
+        </ul>
+    </div>
+    <div class="div2">
+        <p id="Disclaimer">&copy;Disclaimer:Some sites linked in this webpage direct you to the pages of Official INDIAN ARMY &amp; INDIAN AIR FORCE sites.
+            <br>
+            <br>
+            <br><span id="Last">Created by :   <a href="./html/project_end.html" target="_blank">&reg;Tushar &amp; Himanshu</a> :) &copy;</span>
+        </p>
+    </div>
 </body>
 
 </html>
