--- a/html/Form_air_force.html
+++ b/html/Form_air_force.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <title>User Authentication Form</title>
     <style>
         fieldset {
             margin: auto;
@@ -95,7 +96,7 @@
         function change() {
             if (document.getElementById("usercheck").value == 11813072) {
                 window.alert("Welcome Home , " + document.getElementById("usercheck").value);
-                location.replace("https://insaiyann.github.io/frontend-army/");
+                location.replace("https://himanshu-1608.github.io/frontend-airforce/");
             } else {
                 document.getElementById("chan").style = "display:block;";
                 document.getElementById("chan").innerHTML = "No User Found by ID - " + document.getElementById("usercheck").value;
