--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Creative Menu</title>
+    <title>Root Website</title>
     <link rel="stylesheet" href="./css/style_creative.css">
 </head>
 
